--- a/Iden_(Vajoming).mw
+++ b/Iden_(Vajoming).mw
@@ -16,6 +16,8 @@ Tahond sijadase ümbrikon lodehes, 2016 m ü.m.t. keskmäižel korktusel. Veziš
 
 Vn 2000 AÜV:oiden rahvahanlugemižen mödhe tahondan eläjiden lugu oli 388 ristitud.
 
+''Svituoter-ümbrikon školrajon nomer 1''-aluzkund baziruiše lähižes suvižes [[Rok Springs (Vajoming)|Rok Springs]]-lidnas, sen Farson-Iden-škol (K-12-kampus) andab valdkundališt opendust žilon eläjile.
+
 == Homaičendad ==
 <references />
 
