--- a/Iden_(Vajoming).mw
+++ b/Iden_(Vajoming).mw
@@ -4,7 +4,7 @@
  | Eläjiden lugu = 281
  | Voz' = 2010
  | Pind = 35
- | Fail =
+ | Fail = Eden Wyoming (51257640592).jpg
  | Pämez' =
  | Telefonkod = +1-307
  | Aigvö = tal'vel [[UTC]]−7.<br/>kezal [[UTC]]−6
