--- a/.gr.mw
+++ b/.gr.mw
@@ -1,4 +1,6 @@
-'''.gr''' om [[Grekanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1989. voz'|1989]]-nden voden 19. päiväl uhokud.<ref>[http://iana.org/domains/root/db/gr.html IANA - .gr Domain Delegation Data.] {{ref-en}}</ref>
+'''.gr''' om [[Grekanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1989. voz'|1989]]-nden voden 19. päiväl uhokud.<ref>[http://iana.org/domains/root/db/gr.html IANA — .gr Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+
+Domennimen registracii voib kahtendel i koumandel tazopindoil. Sab säta domennimid grekan kirjamištol. Vspäi 2014 al'ternativine .ελ-domen om olmas.
 
 == Homaičendad ==
 <references />
