--- a/.gr.mw
+++ b/.gr.mw
@@ -1,6 +1,16 @@
 '''.gr''' om [[Grekanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1989. voz'|1989]]-nden voden 19. päiväl uhokud.<ref>[http://iana.org/domains/root/db/gr.html IANA — .gr Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Domennimen registracii voib kahtendel i koumandel tazopindoil. Sab säta domennimid grekan kirjamištol. Vspäi 2014 al'ternativine .ελ-domen om olmas.
+Domennimen registracii voib kahtendel i koumandel tazopindoil. Sab säta domennimid grekan kirjamištol. Vspäi 2014 al'ternativine .ελ-domen om olmas, kävutadas sidä vspäi 2018.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.com.gr''', '''.co.gr''' — kommertižed kompanijad (jäl'gmäine domen kävutase harvoin).
+* '''.edu.gr''' — opendusen aluzkundad.
+* '''.net.gr''' — internetan provaiderad (kaikuččel toine kahtenden tazopindan domennimi voib olda).
+* '''.org.gr''' — kommertižetomad organizacijad.
+* '''.gov.gr''' — valdkundaližed organad.
+* '''.mil.gr''' — azekhad väged.
+* '''.mod.gr''' — Grekanman kaičendministruz.
+* '''.sch.gr''' — školopendusen aluzkundad.
 
 == Homaičendad ==
 <references />
