--- a/Kim_Kibom.mw
+++ b/Kim_Kibom.mw
@@ -2,7 +2,9 @@
 | изображение = Key in moscow.jpg
 | описание изображения = Khi [[Moskv]]as, vn 2011 sügüz'ku
 }}
-'''Kim Kibom''' ({{lang-ko|김기범}}; sünd. [[23. sügüz'ku]] [[1991]], [[Tegu]], [[Suvikorei]]) om korejalaine mez', tutab kuti '''Khi'''-pajatai ({{lang-ko|키}}). Om «[[SHINee]]»-muzikgruppan rep-solistan vspäi 2008, mugažo ühtneb «Toheart»-duetha vspäi 2014.
+'''Kim Kibom''' ({{lang-ko|김기범}}; sünd. [[23. sügüz'ku]] [[1991]], [[Tegu]], [[Suvikorei]]) om korejalaine pajatai, akt'or, TV-vedai da modan dizainer. Tutab kuti '''Khi'''-pajatai ({{lang-ko|키}}).
+
+Mez' om «[[SHINee]]»-muzikgruppan rep-solistan vspäi 2008, mugažo ühtneb «Toheart»-duetha vspäi 2014. Zavodi solišt kar'jerad vl 2018.
 
 == Diskografii ==
 === Singlad ===
