--- a/Kim_Kibom.mw
+++ b/Kim_Kibom.mw
@@ -2,18 +2,18 @@
 | изображение = Key in moscow.jpg
 | описание изображения = Khi [[Moskv]]as, vn 2011 sügüz'ku
 }}
-'''Kim Kibom''' ({{lang-ko|김기범}}; sünd. [[23. sügüz'ku]] [[1991]], [[Tegu]], [[Suvikorei]]) om korejalaine pajatai, akt'or, TV-vedai da modan dizainer. Tutab kuti '''Khi'''-pajatai ({{lang-ko|키}}).
+'''Kim Kibom''' ({{lang-ko|김기범}}; sünd. [[23. sügüz'ku]] [[1991]], [[Tegu]], [[Suvikorei]]) om korejalaine pajatai, fil'miden, doramoiden i müzikloiden akt'or, TV-vedai da modan dizainer. Tutab kuti '''Khi'''-pajatai ({{lang-ko|키}}).
 
 Mez' om «[[SHINee]]»-muzikgruppan rep-solistan vspäi 2008, mugažo ühtneb «Toheart»-duetha vspäi 2014. Zavodi solišt kar'jerad vl 2018.
 
 == Diskografii ==
 === Singlad ===
-* Healing (duetal TRAX:anke, 2010)
-* Boys & Girls (duetal [[Girls' Generation]]-muzikgruppanke)
-* Barbie Girl (duetal [[Čon Džessika|Džessika Čonanke]])
-* One Dream" ([[BoA]] feat. Henry Lau and Key)
-* Two Moons" (duetal [[EXO]]:nke)
-* Hold On
+* Healing (2010, ''Spravitand'', duetal TRAX:anke)
+* Boys & Girls (2010, ''Prihad da neiččed'', duetal [[Girls' Generation]]-muzikgruppanke)
+* Barbie Girl (2010, ''Barbi-neižne'', duetal [[Čon Džessika|Džessika Čonanke]])
+* One Dream (2012, ''Üks' unikuva'', [[BoA]] feat. Henry Lau and Key)
+* Two Moons (2012, ''Kaks' kudmašt'', duetal [[EXO]]:nke)
+* Hold On (2015, ''Pid'oitele'')
 
 == Homaičendad ==
 <references />
