*Empty MediaWiki Message*

--- a/Kim_Kibom.mw
+++ b/Kim_Kibom.mw
@@ -13,7 +13,7 @@ Mez' om «[[SHINee]]»-muzikgruppan rep-solistan vspäi 2008, mugažo ühtneb «
 * Barbie Girl (2010, ''Barbi-neižne'', duetal [[Čon Džessika|Džessika Čonanke]])
 * One Dream (2012, ''Üks' unikuva'', [[BoA]] feat. Henry Lau and Key)
 * Two Moons (2012, ''Kaks' kudmašt'', duetal [[EXO]]:nke)
-* Hold On (2015, ''Pid'oitele'')
+* Hold On (2015, ''Pid'oitele'', ühtes Axodus:anke)
 
 == Homaičendad ==
 <references />
