--- a/.ru.mw
+++ b/.ru.mw
@@ -1,7 +1,9 @@
 [[Fail:Cctld-ru-logo.png|thumb|right|250px|Venäman internetan reguliruindorganizacijan logotip]]
-'''.ru''' om [[Venäma]]n [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 7. päiväl sulakud<ref>[http://iana.org/domains/root/db/ru.html IANA — .ru Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, se dat oigendase [[Runet]]an päiväks. Venäman ližadomen om [[.рф]].
+'''.ru''' om [[Venäma]]n [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 7. päiväl sulakud<ref>[http://iana.org/domains/root/db/ru.html IANA — .ru Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, se dat oigendase [[Runet]]an päiväks.
 
-Domennimen registracii om lasktud kahtendel tazopindal. Vn 2022 vilukus kaik 5,03 mln domennimid oli registriruidud .ru-zonas.
+Venäman ližadomen om [[.рф]] vspäi 2010, [[.рус]]-domen kävutase venäkel'žel ühthižkundal mail'madme vspäi 2015, molembiden domennimed kirjutadas kirilližil kirjamil vaiše.
+
+Domennimen registracii .ru-zonas om lasktud kahtendel tazopindal, personoile i kompanijoile, sidä kesken verhiš maiš. Vn 2022 vilukus kaik 5,03 mln domennimid oli registriruidud .ru-zonas.
 
 Eziauguižešti meletadihe .ru-domenad [[.su]]-domenan jäl'ghetulijaks, i registracii jäl'gmäižes oli kel'tud, no om lasktud möst vspäi 2002.
 
