--- a/.ru.mw
+++ b/.ru.mw
@@ -1,11 +1,26 @@
 [[Fail:Cctld-ru-logo.png|thumb|right|250px|Venäman internetan reguliruindorganizacijan logotip]]
-'''.ru''' om [[Venäma]]n [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 7. päiväl sulakud<ref>[http://iana.org/domains/root/db/ru.html IANA — .ru Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, se dat oigendase [[Runet]]an päiväks.
+'''.ru''' om [[Venäma]]n [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 7. päiväl sulakud<ref>[http://iana.org/domains/root/db/ru.html IANA — .ru Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, nece dat oigendase [[Runet]]an päiväks.
 
 Venäman ližadomen om [[.рф]] vspäi 2010, [[.рус]]-domen kävutase venäkel'žel ühthižkundal mail'madme vspäi 2015, molembiden domennimed kirjutadas kirilližil kirjamil vaiše.
 
-Domennimen registracii .ru-zonas om lasktud kahtendel tazopindal, personoile i kompanijoile, sidä kesken verhiš maiš. Vn 2022 vilukus kaik 5,03 mln domennimid oli registriruidud .ru-zonas.
+== Registracii ==
+Domennimen registracii .ru-zonas om lasktud kahtendel tazopindal, personoile i kompanijoile, sidä kesken verhiš maiš. Vn 2022 vilukus kaik 5,03 mln domennimid oli registriruidud .ru-zonas. Sen domennimi voib olda latinan kirjamištol vaiše.
 
 Eziauguižešti meletadihe .ru-domenad [[.su]]-domenan jäl'ghetulijaks, i registracii jäl'gmäižes oli kel'tud, no om lasktud möst vspäi 2002.
+
+== Kahtenden tazopindan domenad ==
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.ac.ru''' — tedon i üläopendusen aluzkundad.
+* '''.com.ru''' — kommertižed organizacijad.
+* '''.edu.ru''' — opendusen aluzkundad.
+* '''.gov.ru''' — Venäman tobmuden federaližed organad.
+* '''.int.ru''' — rahvahidenkeskeižed organizacijad.
+* '''.mil.ru''' — Venäman azekhad väged.
+* '''.net.ru''' — otnuded Internetha organizacijad.
+* '''.org.ru''' — kommertižetomad organizacijad.
+* '''.pp.ru''' — personad.
+
+Niiden ližaks joga federacijan subjekt om ičezenke kahtenden tazopindan domenanke. Om ičeze sen tazopindan domennimid erasil-se järedoil lidnoil, kudambad ei olgoi subjektan pälidnaks.
 
 == Homaičendad ==
 <references/>
