--- a/Päivituz.mw
+++ b/Päivituz.mw
@@ -1,9 +1,9 @@
-[[Fail:Sunbath.jpg|thumb|right|250px|Päivitui naine.]]
+[[Fail:Sunbath.jpg|thumb|right|250px|Päivitui naine]]
 '''Päivituz''' om [[nahk]]an pimidund [[ul'trafioletine sädegoičend|ul'trafioletižen sädegoičendan]] painusen tagut, [[päiväine|päiväižen]] tobjimalaz. Melanin-pigment sädase nahkan alašoiduiš päivitusen jäl'ghe, se om [[D (vitamin)|D-vitaminan]] aluz.
 
-Tariž päivituda penil aigoil, päivituz šingotase vitkos. Hätkeline rattematoi olend päiväižen sädegoičendas, mugažo [[solärii|solärijas]], vedab löumendusidennoks, nervoiden i südäikeran sistemad mokičesoiš.
+Tariž päivituda penil aigoil, päivituz šingotase vitkos. Hätkeline rattematoi olend päiväižen sädegoičendas, mugažo [[solärii|solärijas]], vedab löumendusidennoks, nervoiden i südäikeran sistemad mokičesoiš. Kremad, katused, šläpad i sobad pit'kidenke hijamidenke kaitas hibjad päivitust vaste.
 
-Lugetihe päivitusen lujad mujud mehekahuden i radklassan tundmuseks amussai. Naižed i aristokratii panihe äi sobad päle kaičemha nahkan vauktust.
+Lugetihe päivitusen lujad mujud mehekahuden i radklassan tundmuseks amussai. Naižed i aristokratii panihe äi sobad päle kaičemha nahkan vauktust. Vn 1903 Nobelän premii tedoiduses insoläcijan ližan polhe i Francijan tetabad naižed vajehtihe verod 1920-nzil vozil, lugeškatihe päivitust tervhuden nägubaks tunduseks.
 
 == Homaičendad ==
 <references />
