--- a/Päivituz.mw
+++ b/Päivituz.mw
@@ -1,9 +1,19 @@
 [[Fail:Sunbath.jpg|thumb|right|250px|Päivitui naine]]
-'''Päivituz''' om [[nahk]]an pimidund [[ul'trafioletine sädegoičend|ul'trafioletižen sädegoičendan]] painusen tagut, [[päiväine|päiväižen]] tobjimalaz. Melanin-pigment sädase nahkan alašoiduiš päivitusen jäl'ghe, se om [[D (vitamin)|D-vitaminan]] aluz.
+'''Päivituz''' om [[nahk]]an pimidund [[ul'trafioletine sädegoičend|ul'trafioletižen sädegoičendan]] painusen tagut, [[päiväine|päiväižen]] tobjimalaz.
 
-Tariž päivituda penil aigoil, päivituz šingotase vitkos. Hätkeline rattematoi olend päiväižen sädegoičendas, mugažo [[solärii|solärijas]], vedab löumendusidennoks, nervoiden i südäikeran sistemad mokičesoiš. Kremad, katused, šläpad i sobad pit'kidenke hijamidenke kaitas hibjad päivitust vaste.
+Melanin-pigment sädase nahkan alašoiduiš päivitusen jäl'ghe, se om [[D (vitamin)|D-vitaminan]] aluz, kudamb om tarbhaine luiden kazvandan täht. Pigment vajehti hibjan tihedoid hibusid evolücijan processas.
 
-Lugetihe päivitusen lujad mujud mehekahuden i radklassan tundmuseks amussai. Naižed i aristokratii panihe äi sobad päle kaičemha nahkan vauktust. Vn 1903 Nobelän premii tedoiduses insoläcijan ližan polhe i Francijan tetabad naižed vajehtihe verod 1920-nzil vozil, lugeškatihe päivitust tervhuden nägubaks tunduseks.
+== Process ==
+Tariž päivituda penil aigoil, päivituz šingotase vitkos, vaugedverižil ristituil eriližikš. Hätkeline rattematoi olend päiväižen sädegoičendas, mugažo [[solärii|solärijas]], vedab löumendusidennoks, nervoiden i südäikeran sistemad mokičesoiš.
+
+Kremad, katused, šläpad i sobad pit'kidenke hijamidenke kaitas hibjad päivitust vaste.
+
+Himižed abutused i bronzatorad oma panemha ratud päivitust nahkale. Om vastal'žid-ki substancijoid, ned vauvhatadas nahkad.
+
+== Istorii ==
+Lugetihe päivitusen lujad mujud mehekahuden i radklassan tundmuseks amussai. Naižed i aristokratii panihe äi sobad päle kaičemha nahkan vauktust.
+
+Vn 1903 Nobelän premii tedoiduses insoläcijan ližan polhe i Francijan tetabad naižed vajehtihe verod 1920-nzil vozil, lugeškatihe päivitust tervhuden nägubaks tunduseks.
 
 == Homaičendad ==
 <references />
