/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -10,7 +10,11 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+* ''Hebon higoho da akan voikhu ala kacu.''
 * ''Kana eile lind, ak eile ristit.''
+* ''Koume akad dai suim.''
+* ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
+* ''Vanh ak vinad job, laho pu vet vedab.''
 </blockquote>
 
 == Homaičendad ==
