/* Sigha sidotud vepsän muštatišed */ +

--- a/Siga.mw
+++ b/Siga.mw
@@ -38,9 +38,10 @@ Kodisigad (''minipig:ad'') oma pened dekorativižed. Mectunuded sigad (''reizorb
 == Kävutand ==
 Kazvatadas maižanduzfermoiš da läviš samha [[sigaliha|lihad]] (mail'man tehmine 97,2 mln tonnoid vl 2005<ref>AÜV:oiden maižanduzministrusen andmused.</ref>), laptaližed produktad oma [[nahk (material)|nahk]] da [[suugased]].
 
-== Sigha sidotud vepsän muštatišed ==
+== Sigha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Kaikuččel sigaižel om ičeze kärzaine.''
+* ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
 * ''Länged sigale ei kožu.''
 * ''Söid kut siga, läksid kut koza.''
 </blockquote>
