/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -28,6 +28,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 * ''Pen' da tark, sur' da šläbäk.''
 * ''Ristit koleb, a živat kadob.''
+* ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
 
 == Homaičendad ==
