--- a/Mec.mw
+++ b/Mec.mw
@@ -21,7 +21,7 @@
 * ''Vičikišt'' — nor' paks mec; paks penzhišt.
 * ''Vidä'' — nor’ kuz’ne mec, mž. paks.
 
-== Mecha sidotud vepsän tärtused ==
+== Mecha sidodud vepsän tärtused ==
 * ''Lamad'' — mecan tarh meckävutamižen täht.
 * ''Mechine, mechaine, mecauk, mecamez''' — mifine mecan ižand.
 * ''Parččom'' — mecan varhapanend.
@@ -29,10 +29,10 @@
 * ''Uhring'' — notked taho mecas.
 * ''Vugonk'' — mecan ajand jogedme.
 
-== Mecha sidotud vepsän muštatišed da ozoitesed ==
+== Mecha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
-* ''Azj eile kondi, mecha ei mäne.''
+* ''Azj eile kondi, mecha ei mäne. / Rad eile kondi, mecha ei lähte.''
 * ''Eraz eläb, ku puzuhu paneb, a toine eläb, ku märgän mecan poltab.''
 * ''Gorä ei mecadme kävele, a rahvastme.''
 * ''Händikast kut taht söta, a üks'kaik kor'bhe kacub.''
