--- a/Söm.mw
+++ b/Söm.mw
@@ -14,6 +14,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 == Sömhä sidodud vepsän muštatišed ==
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki.''
+* ''Ei i car' kuldad sö.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
 * ''Heimod om äi, söda ei kus.''
 * ''Kelel päd ed söta.''
