/* Kuldha sidotud vepsän muštatiž */ +

--- a/Kuld.mw
+++ b/Kuld.mw
@@ -19,8 +19,9 @@ Kuld om inertine lujas himižešti. Reagiruib HClO<sub>4</sub> i H<sub>2</sub>Se
 == Kävutand ==
 Kuld om lujas tetab juvelirine metall. Ottas kävutamižhe sidä mugažo elektrotehnikas, elektronikas da medicinas. Kuld om mail'man finansižen sisteman üks' päelementoišpäi, ende oigenzi [[rahad|rahoiden]] funkcijad. Erazvuiččiden valdkundoiden päbankad tehtas ičheze sured varad kuldad. Kuldaspäi tehtas kal'hid rahuzid. Om metallan löudmižsijid äjiš valdkundoiš.
 
-== Kuldha sidotud vepsän muštatiž ==
+== Kuldha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ei i car' kuldad sö.''
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
 </blockquote>
 
