--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -11,6 +11,14 @@ Keskaigaline [[Homoi Akvinlaine]]-filosof sanui, miše nened ičendad oma tarbha
 
 Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden konkursad, čomamahtoiden i modan ozutelendad vedasoiš äjiš maiš.
 
+== Čomudehe sidodud vepsän muštatišed ==
+<blockquote>
+* ''Čoma i unes čoma.''
+* ''Ei kalliž ole čomuz, a kalliž om pä.''
+* ''Sigä om čoma, kus meid ei ole.''
+* ''Väges ed čomenzu.''
+</blockquote>
+
 == Kacu mugažo ==
 * '''[[Čomakulu]]''' / [[kamedindaline]]
 * [[Estetik]]
