--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -9,6 +9,13 @@ Armastuz om üks' fundamentaližiden i ühthižiden temoiden mail'man [[kul'tur]
 
 Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), sebranikoiden keskes («filija»), romantine armastuz («eros») i ičtazandmižen armastuz («agape»).
 
+== Armastushe sidodud vepsän muštatišed ==
+<blockquote>
+* ''Armaz kuti hahk lambaz verhas läväs.''
+* ''Solatomad särpta da ei mel'hišt čukoida.''
+* ''Äi om hüvid, da vähä om armhid.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
