--- a/Sol.mw
+++ b/Sol.mw
@@ -12,6 +12,11 @@ Sol om tarbhaine ristitun da toižiden eläbiden olijoiden elonradmižen täht, 
 
 Mail'man tervhudenkaičendan organizacii rekomenduib röunatada natrijan kulutandad kahtel grammal päiväs täuz'kaznuzile, mugoine natrijan lugumär mülüb solan vidhe grammaha. Pidab muštta, miše natrii om toižiden söndtavaroiden palaks, i sol mülüb lihaproduktoihe, mineralvedhe da paštateshe, ka puhthan solan kulutand voib olda sekundarižeks.
 
+== Solha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Solatomad särpta da ei mel'hišt čukoida.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
