--- a/Lumi.mw
+++ b/Lumi.mw
@@ -12,12 +12,23 @@ Verez lumi om hüvä lämuzizoläcii, pidab äi likumatont il'mad, sen tagut lum
 
 Pandas laudoid pöudoiden veril rividen nägul tal'vaigaks, miše kaita sadegid maižandusen täht.
 
-== Lumhe sidodud vepsän muštatišed ==
+== Lumhe sidodud vepsän tärtused ==
+* ''Lumi kuti hatrad'' — sur' lumi.
+* ''Luminik'' — olanj pekstud lumenke hernehjauhospäi.
+* ''Lumivezi'' — sula vezi.
+
+== Lumhe sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Jevdokijoš lunt paneb koiran kortte, a ol'gut ei kata.''
 * ''Kus om lumi, sigä jäl'ged.''
 * ''Lunt pandes nägub, a heittes ei nägu.''
 * ''Uz' lumi tuli tošt otmaha.''
+</blockquote>
+
+=== Ozoitesed ===
+<blockquote>
+Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap' (harag).
 </blockquote>
 
 == Homaičendad ==
