/* Sigha sidodud vepsän muštatišed */ +

--- a/Siga.mw
+++ b/Siga.mw
@@ -43,6 +43,7 @@ Kazvatadas maižanduzfermoiš da läviš samha [[sigaliha|lihad]] (mail'man tehm
 * ''Kaikuččel sigaižel om ičeze kärzaine.''
 * ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
 * ''Länged sigale ei kožu.''
+* ''Sugun mödhe siga valitas.''
 * ''Söid kut siga, läksid kut koza.''
 </blockquote>
 
