/* Jumalha sidodud vepsän muštatišedMi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}} */

--- a/Jumal.mw
+++ b/Jumal.mw
@@ -8,7 +8,7 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 
 == Jumalha sidodud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
 <blockquote>
-* ''Andoi jumal sun, andab sömäd-ki.''
+* ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Jumal ei käske edelpäi teta.''
 * ''Jumalan bardha em voigoi tabatas.''
 * ''Jumalata ala mäne nikuna.''
