/* Sömhä sidodud vepsän muštatišed */

--- a/Söm.mw
+++ b/Söm.mw
@@ -13,7 +13,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 
 == Sömhä sidodud vepsän muštatišed ==
 <blockquote>
-* ''Andoi jumal sun, andab sömäd-ki.''
+* ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Ei i car' kuldad sö.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
 * ''Heimod om äi, söda ei kus.''
