/* Heimolaižihe sidodud vepsän muštatišed */ +

--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -107,6 +107,7 @@
 <blockquote>
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
 * ''Heimod om äi, söda ei kus.''
+* ''Hüväd susedad pahaze heimho ed vajehta.''
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
 </blockquote>
