+ galerei, +hom, aktualizacii

--- a/Topki.mw
+++ b/Topki.mw
@@ -5,21 +5,21 @@
  | Lidnanznam text = Topkin lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 27,963
- | Voz' = 2017
+ | Eläjiden lugu = 27,673
+ | Voz' = 2021
  | Pind = 51.72
- | Fail = Административное здание на ул.Привокзальная.JPG
+ | Fail = Бывшая Комсомольская площадь.JPG
  | Pämez' = Dmitrii Pak<br />(tal'vku 2016—)
  | Telefonkod = +7-38454-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Topki''' ({{lang-ru|Топки}}) om [[Venäma]]n lidn, lidnankund da transporttesol'm [[Kemerovon agj]]an lodehes. Se om [[Topkin rajon]]an administrativine keskuz, mülüb rajonha vspäi 2005.
+'''Topki''' ({{lang-ru|Топки́}}) om [[Venäma]]n lidn, lidnankund da transporttesol'm [[Kemerovon agj]]an lodehes. Se om [[Topkin rajon]]an administrativine keskuz, mülüb rajonha vspäi 2005.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1914 raudtestancijaks «[[Transsib]] — [[Kemerovo|Ščeglovo]]»-jonol. Vspäi 1917 puruvedimiden depo radoi, [[Nevondkundaline Ühtištuz|NSTÜ:n]] parahim 1930-nzil vozil. Kätihe radnikžiloks vl 1929. Se sai lidnan statusad vn 1933 10. päiväl sulakud. Järed cementtegim om saudud vll 1953−1966, radab sijaližel torhudel.
 
-Topki šingotase cementantegimel, raudten edheotandoil i sömtegimištol (kiruhsöndan «Podorožnik»-verkon tehmine). Om raudtesol'meks Transsiban, Kemerovon i Novokuzneckan čuradusihe.
+Topki šingotase [[cement]]antegimel, raudten edheotandoil i sömtegimištol (kiruhsöndan «Podorožnik»-verkon tehmine). Om raudtesol'meks Transsiban, Kemerovon i Novokuzneckan čuradusihe.
 
 == Geografijan andmused ==
 Lidn sijadase 230..310 m ü.m.t. korktusil. Tahond om sokaz päivlaskmha lidnaspäi. Matkad [[Kemerovo]]hosai om 20 km päivlaskmha orhal, avtol vai raudtedme, se om lähembaine lidn. Ratas [[mouckivi|mouckiven]] löudmižsijad 7 kilometras lodeheze. «Sibir'»-avtote (R-255) ümbärdab lidnad pohjoižpäivnouzmaižes poles.
@@ -27,12 +27,26 @@ Lidn sijadase 230..310 m ü.m.t. korktusil. Tahond om sokaz päivlaskmha lidnasp
 Topki om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 28 641 ristitud, rajonan kaks' koumandest. Kaikiš suremb ristitišt oli 34 100 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen pühäpert' (om saudud vll 1994−2006) i ph. Mikulai-čudonsädajan jumalanpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 28 641 ristitud, rajonan kaks' koumandest. Kaikiš suremb ristitišt oli 34 100 eläjad vl 1992.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/14430 Topkin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: ph. Sergii Radonežalaižen pühäpert' (om saudud vll 1994−2006) i ph. Mikulai-čudonsädajan jumalanpert' (om saudud vl 1972, eile rados).
 
 Topkin tehnine tehnikum om professionaližen opendusen aluzkundaks.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Административное здание на ул.Привокзальная.JPG|Administrativine sauvuz läz päraudtestancijad (2012)
+Обелиск павшим за Родину в ВОВ на железнодорожной площади,начало 2000-х.jpg|Muštpacaz pölištunuzile [[Sur' Tatanmaine soda|Suren sodan]] aigan, 2000-nziden voziden nägu
+Трубы топкинского цемзавода.jpg|Topkin cementantegim vl 2014
+Паровоз,установленный на привокзальной площади.JPG|Puruvedim muštnikaks vagzalan torgul (2011)
+Топки, привокзальная площадь.JPG|Topki-päraudtestancijan sauvused vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
-* [http://admtopki.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admtopki.ru'').] {{ref-ru}}
+* [http://e-topki.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''e-topki.ru'').] {{ref-ru}}
 {{Commons|Category:Topki}}
 
 {{Kemerovon agjan lidnad}}
