--- a/Topki.mw
+++ b/Topki.mw
@@ -31,7 +31,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 28 641 ristitud, r
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/14430 Topkin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: ph. Sergii Radonežalaižen pühäpert' (om saudud vll 1994−2006) i ph. Mikulai-čudonsädajan jumalanpert' (om saudud vl 1972, eile rados).
 
-Topkin tehnine tehnikum om professionaližen opendusen aluzkundaks.
+Topkin tehnine tehnikum<ref>[http://topkittt.ru/ Topkin tehnižen tehnikuman sait (''topkittt.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
@@ -46,7 +46,8 @@ Topkin tehnine tehnikum om professionaližen opendusen aluzkundaks.
 <references />
 
 == Irdkosketused ==
-* [http://e-topki.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''e-topki.ru'').] {{ref-ru}}
+* [http://admtmo.ru/ Topkin municipaližen ümbrikon oficialine sait (''admtmo.ru'').] {{ref-ru}}
+* [http://e-topki.ru/ Lidnankundan tobmuden aluzkundoiden vanh sait (''e-topki.ru'' voziden 2006−2019 arhivanke).] {{ref-ru}}
 {{Commons|Category:Topki}}
 
 {{Kemerovon agjan lidnad}}
