--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -17,6 +17,11 @@ Ristituiden kulutuzmärad oma röunatomad, no varad oma röunatud täutamha kulu
 
 Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan šingotesen, metodologine, ideologine, kritine i teoretine.
 
+== Ekonomikha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Kenen tavar, ka se i arvon paneb.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Ekonomik (avar tärtuz)]]
 * [[Maižanduz]]
