/* Ekonomikha sidodud vepsän muštatiž */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -17,9 +17,10 @@ Ristituiden kulutuzmärad oma röunatomad, no varad oma röunatud täutamha kulu
 
 Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan šingotesen, metodologine, ideologine, kritine i teoretine.
 
-== Ekonomikha sidodud vepsän muštatiž ==
+== Ekonomikha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Kenen tavar, ka se i arvon paneb.''
+* ''Tervhut ed osta.''
 </blockquote>
 
 == Kacu mugažo ==
