--- a/Kuld.mw
+++ b/Kuld.mw
@@ -23,6 +23,7 @@ Kuld om lujas tetab juvelirine metall. Ottas kävutamižhe sidä mugažo elektro
 <blockquote>
 * ''Ei i car' kuldad sö.''
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
+* ''Tervhuz om kal'hemb kuldad.''
 </blockquote>
 
 == Irdkosketused ==
