/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -13,6 +13,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sinun sana da jumalale korvha.''
+* ''Teravas sanutud, da ei teravas tehtud.''
 * ''Äi sanoid, da vähä azjoid.''
 </blockquote>
 
