--- a/An-22.mw
+++ b/An-22.mw
@@ -1,7 +1,25 @@
-[[Fail:Russian Air Force Antonov An-22A Dvurekov-1.jpg|thumb|right|250px|Antonov An-22.]]
-'''An-22 «Antei»''' ({{lang-ru|Ан-22 «Антей»}}; [[PAKO:n kodifikacii|PAKO:n kodifikacijan]] mödhe — '''Cock''' «Kukoi») om «Antonov»:an soda[[lendim]]. Se om kaikiš suremb lendim mail'mas turbopropellerlikutimidenke, om nell' likutint.
+[[Fail:Russian Air Force Antonov An-22A Dvurekov-1.jpg|thumb|right|250px|Antonov An-22 Venäman il'mvägiš]]
+'''An-22 «Antei»''' ({{lang-ru|Ан-22 «Антей»}}; [[PAKO:n kodifikacii|PAKO:n kodifikacijan]] mödhe — '''Cock''' «Kukoi») om ukrainižen «[[Antonov (kompanii)|Antonov]]»-kompanijan nevondkundaline sodatransportine [[lendim]]. Se om kaikiš suremb lendim mail'mas turbopropellerlikutimidenke, om nell' likutint.
 
-Ezmäine lenduz oli [[1965]]-nden voden uhokul. Kaiked om 68 lendint, pästtihe vozil 1966—1976, sidä kesken 22 lendint An-22A-modifikacijanke. Om kävutandas vn 1969 vilukuspäi, Venämas i Ukrainas — tähäsai.
+Ezmäine lenduz tegihe vn [[1965]] uhokus. Kaik oli 67 lendint, pästtihe seičemeks serijaks (kümne lendint jogahižes) [[Taškent]]an aviategimel vll 1966−1976, sidä kesken 22 lendint An-22A-modifikacijanke. Lendimed oliba kävutandas vn 1969 vilukuspäi, niiden radon strok om 26 vot. Venämas i Ukrainas om nenid lendimid tähäsai: nell' lendint oma kävutandas i kaitihe koume lendint muzejoiden täht.
+
+Kävutihe lendimid avaros nevondkundaližen hogahtusen Afganistanha zavodindas, nevondkundaližiden sodavägiden lähtendan aigan Päivnouzmaižes Saksanmaspäi, pagenikoiden transportiruindan täht Afrikan maiš.
+
+== Tehnižed harakteristikad ==
+* Tomehišt: 5..7 ristitud.
+* Passažiroiden lugu: 290 saldatad vai 202 satatadud mest vai 150 parašutistad.
+* Jügutoitmižvoind: 80 tonnhasai.
+* Irdmärad: 57,31 m pitte, 12,53 m kortte, maihutuzkeskust 64,4 m.
+* Pal'han lendimen mass om 120 tonnad, mass täudenke jügunke 227 tonnad, sidä kesken poltusen mass 96 tonnhasai.
+* Likutimed: 4 × TVD NK-12MA, kaikuččen vägevuz om 15 265 hebonväged (11 227 kVt)
+* Puno: AV-90, diametr 6,2 m.
+
+== Lenduzharakteristikad ==
+* Kaikiš lujemb piguz: 650 km/čas
+* Kreiserine piguz: 560 km/čas
+* Praktine edhuz: 5225 km
+* Pal'han lendimen edhuz: 8500 km
+* Lendusen praktine korktuz: 9000 metrhasai.
 
 {{Commons|Antonov An-22}}
 
