--- a/.fi.mw
+++ b/.fi.mw
@@ -1,5 +1,9 @@
 '''.fi''' om [[Suomenma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 17. päiväl tal'vkud.<ref>[http://iana.org/domains/root/db/fi.html IANA — .fi Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registracii om lasktud kahtendel tazopindal. Kaik 514 293 domennimed oli vn 2021 9. sulakud.
+
+Vn 2016 sügüz'kus heittihe severzid-se röunadusid registracijan täht: 15-vozne igä i elämine Suomenmas.
+
 == Homaičendad ==
 <references />
 
