--- a/.fi.mw
+++ b/.fi.mw
@@ -1,8 +1,12 @@
+[[Fail:.fi domain logo.jpg|thumb|right|250px|Domenan logotip]]
 '''.fi''' om [[Suomenma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 17. päiväl tal'vkud.<ref>[http://iana.org/domains/root/db/fi.html IANA — .fi Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Registracii om lasktud kahtendel tazopindal. Kaik 514 293 domennimed oli vn 2021 9. sulakud.
+Registracii om lasktud kahtendel tazopindal. Kaik 514,293 domennimed oli vn 2021 9. sulakud. Voib kävutada kirjamišton specifižid kirjamid (ä, å, ö) domennimes, hot' i ei rekomenduigoi.
 
 Vn 2016 sügüz'kus heittihe severzid-se röunadusid registracijan täht: 15-vozne igä i elämine Suomenmas.
+
+== Kacu mugažo ==
+* [[.ax]] — [[Ahvenanma]]n domen.
 
 == Homaičendad ==
 <references />
