--- a/Kaiv.mw
+++ b/Kaiv.mw
@@ -1,13 +1,12 @@
 {{10000}}{{A10000}}
-[[Fail:Колодец на Пинеге.jpg|thumb|right|250px|Kaiv [[Pineg]]anmal, 1986]]
-'''Kaiv''' vai '''kaid''' om [[gidrotehnine sauvuz]] [[vezi|gruntveziden]] samižen täht. Tobjimalaz nece om püštoiged süvenduz varmitadud seinidenke i mehanizm veden libundan täht (vädr-jodog noras, čepiš, vai [[pomp]]). 
+[[Fail:Колодец на Пинеге.jpg|thumb|right|250px|Kaiv [[Pineg]]anmal, [[Arhangel'skan agj]], 1986]]
+'''Kaiv''' vai '''kaid''' om [[gidrotehnine sauvuz]] [[vezi|gruntveziden]] samižen täht. Tobjimalaz nece om püštoiged süvenduz varmitadud seinidenke i mehanizm veden libundan täht (vädr-jodog noras, čepiš, vai [[pomp]]), vai muite palik koukunke mehanizmata. 
 
-Valitas sijid sauvomha kaivad elektro- vai seismotedištelendal. Löutas gruntvet niiden elektrovastustusen alendusen mödhe (10..50 Om*m) i pit'kan lainhen piguden lujendusen mödhe 1,6..1,8 tuhad metrihesai sekundas. Kaidas kaivad käzimahtoil tobjimalaz kaičemha mahusen strukturad.
+Valitas sijid sauvomha kaivad elektro- vai seismotedištelendal. Löutas gruntvet niiden elektrovastustusen alendusen mödhe (10..50 Om*m) i pit'kan lainhen piguden lujendusen mödhe 1,6..1,8 tuhad metrihesai sekundas. Kaidas kaivad käzimahtoil tobjimalaz kaičemha mahusen strukturad. Kaiv erineb [[mareig]]uspäi surembal levedusel, sen reig voib olda nellikanvuitte-ki.
 
-Ühted kaikiš süvembiš kaivoišpäi oma [[Karakum]]-letetazangištos. Niišpäi äjad oma enamba sadad metrad süvütte, üks' — 270 metrad.
+Kaivoiden palad oma kaivuz, pä ülemb man tazopindad, vedenotai alah. Seiniden material oleleb raudbetonižed renghad, pumaterial ([[strub]]), kivine vai savičpaneg.
 
-== Kacu mugažo ==
-* [[Mareig]]
+Kaiv om tarbhaine veden varapurtkeks uman täht. Ühted kaikiš süvembiš kaivoišpäi oma [[Karakum]]-letetazangištos. Niišpäi äjad oma enamba sadad metrad süvütte, üks' — 270 metrad.
 
 == Homaičendad ==
 <references />
