--- a/Baltika_(oludenkeituden_kompanii).mw
+++ b/Baltika_(oludenkeituden_kompanii).mw
@@ -1,8 +1,11 @@
-[[Fail:Baltika Barry Kent.jpg|thumb|right|250px|«Baltika»-kompanijan produkcii laukas.]]
-'''Oludenkeituden «Baltika»-kompanii''' ([[venäkel'|ven]].: ''Пивоваренная компания «Балтика»'') om kaikiš suremb [[Venäma|venämalaine]] [[olud|oludenkeituden]] kompanii. Štab-kvartir om [[Piter]]iš.
+[[Fail:Baltika Barry Kent.jpg|thumb|right|250px|«Baltika»-kompanijan produkcii laukas]]
+'''Oludenkeituden «Baltika»-kompanii''' ({{lang-ru|Пивоваренная компания «Балтика»}}) om kaikiš suremb [[Venäma|venämalaine]] [[olud|oludenkeituden]] kompanii. Päfater sijadase [[Piter]]iš.
+
+Kompanijan ezmäine tegim radaškanzi Piteriš vl 1990. Edheotand oli privatiziruidud, oli avoinudeks akcionersebraks vll 1998−2014. Vll 2012−2014 danine [[Carlsberg Group]]-kompanii sulazi «Baltikad» i kändihe sen üks'jäižeks valdoičijaks. Venälaine kompanii pästab produkcijad enamba mi kaks'kümnen torguindmarkan al, oluden ližaks ned oma [[vas]] i [[mineralvezi]].
 
 == Irdkosketused ==
-* [http://www.baltika.ru/ «Baltika»-kompanijan oficialine sait.] {{ref-ru}} {{ref-en}}
+* [http://corporate.baltika.ru/ «Baltika»-kompanijan oficialine sait (''corporate.baltika.ru'').] {{ref-ru}} {{ref-en}}
+{{Commons|Category:Baltika}}
 
 {{stub}}
 [[Kategorii:Oluden tegijad]]
