--- a/Argentinan_flag.mw
+++ b/Argentinan_flag.mw
@@ -1,9 +1,9 @@
 [[Fail:Flag of Argentina.svg|border|right|250px]]
 '''Argentinan flag''' ({{lang-es|Bandera de la Argentina}}) om [[Argentin]]-valdkundan üks' oficialižiš simvolišpäi. Nügüdläine flag om vahvištadud [[1812]]-nden voden 27. päiväl uhokud. Flagan proporcii om ''9:14''.
 
-Argentinine Manuel' Bel'grano-jenaral tariči flagan pirdatest vl 1812. Mujud oma azur'ne i hobed (vauged). Flagan mujud i päiväine oma ozutadud [[Argentinan valdkundznam]]al mugažo. Azur'ne muju simvolizuruib [[La Plat (jogi)|La Plat]]-joged. Hobed muju kuvadab Argentin-nimitusen znamoičendad ({{lang-la|argentum}} «hobed»). Flagan mujud libudas francižen [[Burbon (dinastii)|Burbon]]-kanzan mujuišpäi. Päiväine om [[inkid]]en jumalan amuine simvol.
+Argentinine Manuel' Bel'grano-jenaral tariči flagan pirdatest vl 1812. Mujud oma azur'ne i hobed (vauged). Flagan mujud i päiväine oma ozutadud [[Argentinan valdkundznam]]al mugažo. Azur'ne muju simvolizuruib [[La Plat (jogi)|La Plat]]-joged. Hobed muju kuvadab Argentin-nimitusen znamoičendad ({{lang-la|argentum}} «hobed»). Flagan mujud libudas francižen [[Burbon (dinastii)|Burbon]]-kanzan mujuišpäi. Päiväine om [[inkid]]en jumalan amuine simvol, om ližatud flagha vl 1818.
 
-Flagan praznikversii ei mülü päiväižen kuvad.
+Flagan praznikversii ({{lang-es|Bandera de Ornato}}) ei mülüta päiväižen kuvad. Edel vn 1985 käskust personoile oli lasktud kävutada mugošt flagad vaiše. Argentinan flagan päiv oigendase joga vodel kezakun 20. päiväl.
 
 {{Commons|Category:National flag of Argentina}}
 
