--- a/.kz.mw
+++ b/.kz.mw
@@ -1,10 +1,12 @@
-'''.kz''' om [[Kazahstan]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 19. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/kz.html IANA — .kz Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.kz''' om [[Kazahstan]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 19. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/kz.html IANA — .kz Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine [[.қаз]]-domen radab vn 2012 keväz'kuspäi domennimiden kirilližel kirjamištol täht.
+
+Registracii .kz-zonas tarbhaičeb serveran sijadust Kazahstanan territorijal. Ei ole registracijan röunadusid kahtendel tazopindal, registracii koumandel tazopindal om voimusine kahtenden tazopindan domenoiden pidajiden röunadusidenke.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.nic.kz/ Domenan sait — KazNIC, «Қазақ торап ақпарат орталығы» (''Verkinformacijan kazahine keskuz, nic.kz'').] {{ref-kz}} {{ref-ru}} {{ref-en}}, nimiden [http://www.nic.kz/rules/ registracijan ohjandimed], ohjandai om ''Kazahstanan IT-kompanijoiden associacii'', Astan
+* [http://www.nic.kz/ Domenan sait — KazNIC, «Қазақ торап ақпарат орталығы» (''Verkinformacijan kazahine keskuz, nic.kz'').] {{ref-kz}} {{ref-ru}} {{ref-en}}, nimiden [http://www.nic.kz/rules/ registracijan ohjandimed], ohjandai om ''Kazahstanan IT-kompanijoiden associacii'', Nur-Sultan
 * [http://iana.org/domains/root/db/kz.html IANA-informacii (''iana.org'').] {{ref-en}}
 
 {{CcTLD}}
