+ galerei, +hom, aktualizacii

--- a/Barabinsk.mw
+++ b/Barabinsk.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Barabinsk<br />Барабинск
- | Lidnanznam =
+ | Lidnanznam =Flag of Barabinsk (Novosibirsk oblast).png
  | Flag = Flag of Barabinsk (Novosibirsk oblast).png
- | Lidnanznam text =
+ | Lidnanznam text = Barabinskan lidnanznam
  | Flag text = Barabinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 29,122
- | Voz' = 2017
+ | Eläjiden lugu = 28,546
+ | Voz' = 2021
  | Pind = 69.48
  | Fail = Arriving Barabinsk, Russia (11442928204).jpg
  | Pämez' = Roman Bobrov<br />(tal'vku 2017—)
@@ -14,7 +14,7 @@
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Barabinsk''' ({{lang-ru|Барабинск}}) om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an päivlaskmaižen palan keskuses. Se om [[Barabinskan rajon]]an administrativine keskuz.
+'''Barabinsk''' ({{lang-ru|Бара́бинск}}, [[sibirin totaran kel'|sibirin totaran kelel]]: ''Көгүтей-тура'') om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an päivlaskmaižen palan keskuses. Se om [[Barabinskan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1893 žiloks raudtestancijanno sauvomha da holitamha [[Transsibirine magistral'|Transsib-raudted]]. Vl 1917 anttihe žilole lidnan statusad.
@@ -22,17 +22,29 @@ Eländpunktan aluz om pandud vl 1893 žiloks raudtestancijanno sauvomha da holit
 Barabinsk šingotase raudten edheotandoil (koume vedimdepod i vagonoiden kohenduzdepo, raudten distancii), «Sibpromsväz'»-tegimel (konstrukcijad i materialad sauvomha joksuzoigendamižpirdoid) i sömtegimištol (oluden i leibän edheotandad, maidtegim, kalankazvatuz, kombisömän tegim).
 
 == Geografijan andmused ==
-Lidn sijadase [[Päivlaskmaine Sibirin tazangišt|Päivlaskmaižen Sibirin tazangišton]] Barabinskan alangištos, 115 m ü.m.t. keskmäižel korktusel. Nell' järved om lidnan pohjoižpäivnouzmaižel röunal. Matkad [[Novosibirsk]]aspäi om 293 km päivlaskmha orhal, 315 km avtol vai raudtedme. Lähembaine lidn om [[Kuibišev (Novosibirskan agj)|Kuibišev]] 6 km pohjoižhe orhal, raudtel (ajelemha jüguid vaiše) vai avtotedme.
+Lidn sijadase [[Päivlaskmaine Sibirin tazangišt|Päivlaskmaižen Sibirin tazangišton]] Barabinskan alangištos, 115 m ü.m.t. keskmäižel korktusel. Nell' järved om lidnan pohjoižpäivnouzmaižel röunal. Matkad [[Novosibirsk]]aspäi om 293 km päivlaskmha orhal, 315 km avtol vai raudtedme. Lähembaine lidn om [[Kuibišev (Novosibirskan agj)|Kuibišev]] kuz' kilometrad pohjoižhe orhal, raudtel (ajelemha jüguid vaiše) vai avtotedme.
 
 Barabinsk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 30 394 ristitud, rajonan kaks' koumandest. Kaikiš suremb ristitišt oli 36..40 tuh. eläjid vll 1959−2001 (40 878 eläjad vl 1959). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ilo»-jumalaižen pühäpert' (om pühästadud vl 1998 Jumalanmaman Katken pühäpertikš) i kaks' časounäd oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 30 394 ristitud, rajonan kaks' koumandest. Kaikiš suremb ristitišt oli 36..40 tuh. eläjid vll 1959−2001 (40 878 eläjad vl 1959).
 
-Professionaližen opendusen aluzkundad: Barabinskan medicinine kolledž i Novosibirskan agjan kul'turan da čomamahtoiden kolledžan filial.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ilo»-jumalaižen pühäpert' (om pühästadud vl 1998 Jumalanmaman Katken pühäpertikš) i kaks' časounäd oma olmas lidnas.
+
+Professionaližen opendusen aluzkundad: Barabinskan medicinine kolledž<ref>[http://medbrb.ru/ Barabinskan medicinižen kolledžan sait (''medbrb.ru'').] {{ref-ru}}</ref> i Novosibirskan agjan kul'turan da čomamahtoiden kolledžan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+4Y1A8602 Barabinsk, Russia (28254995626).jpg|Jumalanmaman «Kaikiden gorähižiden ilo»-jumalaižen pühäpert', vn 2016 nägu
+Barabinsk, Russia (11442718515).jpg|Puruvedim-muštnik (2013)
+Barabinsk railway station.jpg|Barabinsk-päraudtestancijan sauvuz vl 2008
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://администрация-барабинска.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''администрация-барабинска.рф'').] {{ref-ru}}
+* [http://barabinsk.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''barabinsk.nso.ru'').] {{ref-ru}}
 {{Commons|Category:Barabinsk}}
 
 {{Novosibirskan agjan lidnad}}
