/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -12,6 +12,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Ei sur' sana sud haugoi.''
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
+* ''Sanub, kuti haugol pähä iškeb.''
 * ''Sinun sana da jumalale korvha.''
 * ''Teravas sanutud, da ei teravas tehtud.''
 * ''Äi sanoid, da vähä azjoid.''
