--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -19,6 +19,8 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 
 == Ekonomikha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Edemba hutid, lähemba otad.''
+* ''Hüvä da veraz, paha da ičeiž.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Tervhut ed osta.''
 </blockquote>
