--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -15,6 +15,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 <blockquote>
 * ''Čoma i unes čoma.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
+* ''Kand sädota, ka mugažo čoma linneb.''
 * ''Sigä om čoma, kus meid ei ole.''
 * ''Väges ed čomenzu.''
 </blockquote>
