/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -20,6 +20,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 == Ekonomikha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Edemba hutid, lähemba otad.''
+* ''Ei katil keita, a emäg.''
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Tervhut ed osta.''
