/* Vauktha mujuhu sidodud vepsän ozoitez */ +

--- a/Vauged_muju.mw
+++ b/Vauged_muju.mw
@@ -65,7 +65,13 @@ Fail:Kamomillasaunio (Matricaria recutita).JPG|[[Haragaine (kazmuz)|Haragaine]]
 Fail:Elster wikipedia2.jpg|[[Harag]]
 </gallery></center>
 
-== Vauktha mujuhu sidodud vepsän ozoitez ==
+== Vauktha mujuhu sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatiž ===
+<blockquote>
+* ''Mustad koirad vauktaks ei voi pesta.''
+</blockquote>
+
+=== Ozoitez ===
 <blockquote>
 * Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap' (harag).
 </blockquote>
