--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -17,6 +17,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Kand sädota, ka mugažo čoma linneb.''
 * ''Sigä om čoma, kus meid ei ole.''
+* ''Sö kromaine, ka linned priha čomaine.''
 * ''Väges ed čomenzu.''
 </blockquote>
 
