--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -22,6 +22,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Edemba hutid, lähemba otad.''
 * ''Ei katil keita, a emäg.''
 * ''Hüvä da veraz, paha da ičeiž.''
+* ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Tervhut ed osta.''
